[tool.poetry]
name = "repl_python3_DC-BO2T-1"
version = "0.1.0"
description = ""
authors = ["aa94022728 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
